# IsingModel

./: CMakeCache.txt  CMakeLists.txt  Ising  Ising.glade  Ising.glade~  Makefile  README.md  binding.h  cmake_install.cmake  compile_commands.json  drawable.h  isingWindow.cpp  isingWindow.h  main.cpp  model.cpp  model.h  ticker.cpp  ticker.h
